force-app/main/default/objects/VN_CargasDadosTemp__c/VN_CargasDadosTemp__c.object-meta.xml
<CustomObject>
    <description>Utilizado para receber as cargas de dados temporária das integrações com o Fielo.</description>
    <label>Carga de Dados Temp</label>
    <nameField>
        <displayFormat>CD-{000000}</displayFormat>
        <label>No. Carga Dados</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cargas de Dados Temp</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>