force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_Ajuste__c.field-meta.xml
<CustomField>
    <fullName>V_Ajuste__c</fullName>
    <label>Ajuste</label>
    <length>255</length>
    <type>Text</type>
</CustomField>