force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_AnoFiscal__c.field-meta.xml
<CustomField>
    <fullName>V_AnoFiscal__c</fullName>
    <description>Ano fiscal relacionado ao registro da carga de dados.</description>
    <inlineHelpText>Ano fiscal relacionado ao registro da carga de dados.</inlineHelpText>
    <label>Ano Fiscal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>