force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_Area__c.field-meta.xml
<CustomField>
    <fullName>V_Area__c</fullName>
    <description>Área do participante responsável pelo resultado do período. Para efeito de histórico.</description>
    <inlineHelpText>Área do participante responsável pelo resultado do período. Para efeito de histórico.</inlineHelpText>
    <label>Área</label>
    <length>255</length>
    <type>Text</type>
</CustomField>