force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_BU__c.field-meta.xml
<CustomField>
    <fullName>V_BU__c</fullName>
    <description>Código da BU</description>
    <label>BU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>