force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_Cargo__c.field-meta.xml
<CustomField>
    <fullName>V_Cargo__c</fullName>
    <description>Cargo do participante responsável pelo resultado do período. Para efeito de histórico.</description>
    <inlineHelpText>Cargo do participante responsável pelo resultado do período. Para efeito de histórico.</inlineHelpText>
    <label>Cargo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>