force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_ChaveExclusiva__c.field-meta.xml
<CustomField>
    <fullName>V_ChaveExclusiva__c</fullName>
    <description>Chave Exclusiva para identificar o registro de Meta do Participante.</description>
    <externalId>true</externalId>
    <inlineHelpText>Chave Exclusiva para identificar o registro de Meta do Participante.</inlineHelpText>
    <label>Chave Exclusiva</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>