force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_CodigoCoordenadorVenda1__c.field-meta.xml
<CustomField>
    <fullName>V_CodigoCoordenadorVenda1__c</fullName>
    <label>Cod Coordenador Vendas 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>