force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_CodigoCoordenadorVendas2__c.field-meta.xml
<CustomField>
    <fullName>V_CodigoCoordenadorVendas2__c</fullName>
    <label>Cód Coordenador Vendas 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>