force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_CodigodoResponsavel1__c.field-meta.xml
<CustomField>
    <fullName>V_CodigodoResponsavel1__c</fullName>
    <label>Cod do Responsavel 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>