force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_CodigoGerentedeVendas__c.field-meta.xml
<CustomField>
    <fullName>V_CodigoGerentedeVendas__c</fullName>
    <label>Cod  Gerente de Vendas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>