force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_CodigoGrupoEconomico__c.field-meta.xml
<CustomField>
    <fullName>V_CodigoGrupoEconomico__c</fullName>
    <label>Cod Grupo Economico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>