force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_CodigoLeaderSetor__c.field-meta.xml
<CustomField>
    <fullName>V_CodigoLeaderSetor__c</fullName>
    <label>Cod Leader Setor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>