force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_CodigoLideranca__c.field-meta.xml
<CustomField>
    <fullName>V_CodigoLideranca__c</fullName>
    <description>Liderança do participante responsável pelo resultado do período. Para efeito de histórico.</description>
    <inlineHelpText>Liderança do participante responsável pelo resultado do período. Para efeito de histórico.</inlineHelpText>
    <label>Cod Dir Liderança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>