force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_CodigoResponsavelCarteira__c.field-meta.xml
<CustomField>
    <fullName>V_CodigoResponsavelCarteira__c</fullName>
    <label>Cod Responsavel Carteira</label>
    <length>255</length>
    <type>Text</type>
</CustomField>