force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_CodigoSetor__c.field-meta.xml
<CustomField>
    <fullName>V_CodigoSetor__c</fullName>
    <description>Código do setor da carga</description>
    <label>Cod Setor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>