force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_Data__c.field-meta.xml
<CustomField>
    <fullName>V_Data__c</fullName>
    <description>Data de referência da carga de resultados e de notas fiscais em aberto.</description>
    <inlineHelpText>Data de referência da carga de resultados e de notas fiscais em aberto.</inlineHelpText>
    <label>Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>