force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_FaturamentoHyperion__c.field-meta.xml
<CustomField>
    <fullName>V_FaturamentoHyperion__c</fullName>
    <label>Faturamento Hyperion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>