force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_GrupoEconomico__c.field-meta.xml
<CustomField>
    <fullName>V_GrupoEconomico__c</fullName>
    <label>Grupo Economico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>