force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_Mes__c.field-meta.xml
<CustomField>
    <fullName>V_Mes__c</fullName>
    <label>Mês</label>
    <length>255</length>
    <type>Text</type>
</CustomField>