force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_Meta__c.field-meta.xml
<CustomField>
    <fullName>V_Meta__c</fullName>
    <label>Meta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>