force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_Motivo__c.field-meta.xml
<CustomField>
    <fullName>V_Motivo__c</fullName>
    <description>Exibe os motivos das validações do registro preenchido pelo batch.</description>
    <inlineHelpText>Exibe os motivos das validações do registro preenchido pelo batch.</inlineHelpText>
    <label>Motivo</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>