force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_NomedoResponsavel2__c.field-meta.xml
<CustomField>
    <fullName>V_NomedoResponsavel2__c</fullName>
    <label>Nome do Responsavel 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>