force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_NomedoResponsavel3__c.field-meta.xml
<CustomField>
    <fullName>V_NomedoResponsavel3__c</fullName>
    <label>Nome do Responsavel 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>