force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_NomeGerenteDeVendas__c.field-meta.xml
<CustomField>
    <fullName>V_NomeGerenteDeVendas__c</fullName>
    <label>Nome Gerente de Vendas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>