force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_NomeLeaderSetor__c.field-meta.xml
<CustomField>
    <fullName>V_NomeLeaderSetor__c</fullName>
    <label>Nome Leader Setor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>