force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_NomeLideranca__c.field-meta.xml
<CustomField>
    <fullName>V_NomeLideranca__c</fullName>
    <description>Nome da Liderança na carga</description>
    <label>Nome Dir Liderança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>