force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_NomeSetor__c.field-meta.xml
<CustomField>
    <fullName>V_NomeSetor__c</fullName>
    <description>Setor do participante responsável pelo resultado do período. Para efeito de histórico.</description>
    <inlineHelpText>Setor do participante responsável pelo resultado do período. Para efeito de histórico.</inlineHelpText>
    <label>Nome Setor Vertical/PME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>