force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_NoResumoCargas__c.field-meta.xml
<CustomField>
    <fullName>V_NoResumoCargas__c</fullName>
    <description>No. do registro de resumo das cargas relacionadas.</description>
    <inlineHelpText>No. do registro de resumo das cargas relacionadas.</inlineHelpText>
    <label>No. Resumo de Cargas</label>
    <referenceTo>VN_ResumoCargasDadosTemp__c</referenceTo>
    <relationshipLabel>Cargas de Dados Temp</relationshipLabel>
    <relationshipName>Cargas_de_Dados_Temp</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>