force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_NumeroCoordenadorVendas1__c.field-meta.xml
<CustomField>
    <fullName>V_NumeroCoordenadorVendas1__c</fullName>
    <label>Num Reg Coordenador de Vendas 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>