force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_NumeroGerenteDeVendas__c.field-meta.xml
<CustomField>
    <fullName>V_NumeroGerenteDeVendas__c</fullName>
    <label>Num Reg Gerente de Vendas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>