force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_NumeroLeaderSetor__c.field-meta.xml
<CustomField>
    <fullName>V_NumeroLeaderSetor__c</fullName>
    <label>Num Reg Leader Setor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>