force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_NumeroLideranca__c.field-meta.xml
<CustomField>
    <fullName>V_NumeroLideranca__c</fullName>
    <description>Número da diretoria regional na carga</description>
    <label>Num Reg Dir Liderança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>