force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_NumeroResponsavel2__c.field-meta.xml
<CustomField>
    <fullName>V_NumeroResponsavel2__c</fullName>
    <label>Num Reg Responsavel 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>