force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_NumeroResponsavel3__c.field-meta.xml
<CustomField>
    <fullName>V_NumeroResponsavel3__c</fullName>
    <label>Num Reg Responsavel 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>