force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_ProdutosEstrategicos__c.field-meta.xml
<CustomField>
    <fullName>V_ProdutosEstrategicos__c</fullName>
    <label>Produtos Estrategicos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>