force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_RegistroLiderImediato__c.field-meta.xml
<CustomField>
    <fullName>V_RegistroLiderImediato__c</fullName>
    <description>Registro do líder imediato do participante.</description>
    <inlineHelpText>Registro do líder imediato do participante.</inlineHelpText>
    <label>Registro do Líder Imediato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>