force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_RegistroParticipante__c.field-meta.xml
<CustomField>
    <fullName>V_RegistroParticipante__c</fullName>
    <description>Registro exclusivo do participante relacionado ao registro do ano fiscal.</description>
    <inlineHelpText>Registro exclusivo do participante relacionado ao registro do ano fiscal.</inlineHelpText>
    <label>Registro Participante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>