force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_ResultadoTotal__c.field-meta.xml
<CustomField>
    <fullName>V_ResultadoTotal__c</fullName>
    <label>Resultado Total</label>
    <length>255</length>
    <type>Text</type>
</CustomField>