force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_SumarizadorCoordVendas1__c.field-meta.xml
<CustomField>
    <fullName>V_SumarizadorCoordVendas1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sumarizador Coordenador Vendas 1</label>
    <referenceTo>VN_Sumarizador__c</referenceTo>
    <relationshipLabel>Cargas de Dados Temp (Sumarizador Coordenador Vendas 1)</relationshipLabel>
    <relationshipName>Cargas_de_Dados_Temp3</relationshipName>
    <type>Lookup</type>
</CustomField>