force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_SumarizadorCoordVendas2__c.field-meta.xml
<CustomField>
    <fullName>V_SumarizadorCoordVendas2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sumarizador Coordenador Vendas 2</label>
    <referenceTo>VN_Sumarizador__c</referenceTo>
    <relationshipLabel>Cargas de Dados Temp (Sumarizador Coordenador Vendas 2)</relationshipLabel>
    <relationshipName>Cargas_de_Dados_Temp4</relationshipName>
    <type>Lookup</type>
</CustomField>