force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_SumarizadorDirLideranca__c.field-meta.xml
<CustomField>
    <fullName>V_SumarizadorDirLideranca__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sumarizador Dir Liderança</label>
    <referenceTo>VN_Sumarizador__c</referenceTo>
    <relationshipLabel>Cargas de Dados Temp (Sumarizador Dir Liderança)</relationshipLabel>
    <relationshipName>Cargas_de_Dados_Temp</relationshipName>
    <type>Lookup</type>
</CustomField>