force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_SumarizadorGerenteVendas__c.field-meta.xml
<CustomField>
    <fullName>V_SumarizadorGerenteVendas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sumarizador Gerente Vendas</label>
    <referenceTo>VN_Sumarizador__c</referenceTo>
    <relationshipLabel>Cargas de Dados Temp (Sumarizador Gerente Vendas)</relationshipLabel>
    <relationshipName>Cargas_de_Dados_Temp2</relationshipName>
    <type>Lookup</type>
</CustomField>