force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_SumarizadorLeaderSetor__c.field-meta.xml
<CustomField>
    <fullName>V_SumarizadorLeaderSetor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sumarizador Leader Setor</label>
    <referenceTo>VN_Sumarizador__c</referenceTo>
    <relationshipLabel>Cargas de Dados Temp (Sumarizador Leader Setor)</relationshipLabel>
    <relationshipName>Cargas_de_Dados_Temp1</relationshipName>
    <type>Lookup</type>
</CustomField>