force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_SumarizadorResponsavel1__c.field-meta.xml
<CustomField>
    <fullName>V_SumarizadorResponsavel1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sumarizador Responsável 1</label>
    <referenceTo>VN_Sumarizador__c</referenceTo>
    <relationshipLabel>Cargas de Dados Temp (Sumarizador do Responsável 1)</relationshipLabel>
    <relationshipName>Cargas_de_Dados_Temp7</relationshipName>
    <type>Lookup</type>
</CustomField>