force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_SumarizadorResponsavel2__c.field-meta.xml
<CustomField>
    <fullName>V_SumarizadorResponsavel2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sumarizador Responsável 2</label>
    <referenceTo>VN_Sumarizador__c</referenceTo>
    <relationshipLabel>Cargas de Dados Temp (Sumarizador do Responsável 2)</relationshipLabel>
    <relationshipName>Cargas_de_Dados_Temp6</relationshipName>
    <type>Lookup</type>
</CustomField>