force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_SumarizadorResponsavel3__c.field-meta.xml
<CustomField>
    <fullName>V_SumarizadorResponsavel3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sumarizador Responsável 3</label>
    <referenceTo>VN_Sumarizador__c</referenceTo>
    <relationshipLabel>Cargas de Dados Temp (Sumarizador do Responsável 3)</relationshipLabel>
    <relationshipName>Cargas_de_Dados_Temp5</relationshipName>
    <type>Lookup</type>
</CustomField>