force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_TipoCarga__c.field-meta.xml
<CustomField>
    <fullName>V_TipoCarga__c</fullName>
    <description>Indica o tipo de carga de dados:
- Metas
- Resultados
- Soluções Estratégicas
- Notas Fiscais em Aberto</description>
    <inlineHelpText>Indica o tipo de carga de dados:
- Metas
- Resultados
- Soluções Estratégicas
- Notas Fiscais em Aberto</inlineHelpText>
    <label>Tipo de Carga</label>
    <length>255</length>
    <type>Text</type>
</CustomField>