force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_ValorAF__c.field-meta.xml
<CustomField>
    <fullName>V_ValorAF__c</fullName>
    <description>Valor a ser utilizado para a carga de metas do AF, resultados e de notas fiscais em aberto.</description>
    <inlineHelpText>Valor a ser utilizado para a carga de metas do AF, resultados e de notas fiscais em aberto.</inlineHelpText>
    <label>Valor AF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>