force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_ValorDecimoMesAF__c.field-meta.xml
<CustomField>
    <fullName>V_ValorDecimoMesAF__c</fullName>
    <description>Valor do décimo mês do ano fiscal. Pode ser utilizado para a carga de Metas e Soluções Estratégicas.</description>
    <inlineHelpText>Valor do décimo mês do ano fiscal. Pode ser utilizado para a carga de Metas e Soluções Estratégicas.</inlineHelpText>
    <label>Valor - Décimo Mês - AF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>