force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_ValorDecimoPrimeiroMesAF__c.field-meta.xml
<CustomField>
    <fullName>V_ValorDecimoPrimeiroMesAF__c</fullName>
    <description>Valor do décimo primeiro mês do ano fiscal. Pode ser utilizado para a carga de Metas e Soluções Estratégicas.</description>
    <inlineHelpText>Valor do décimo primeiro mês do ano fiscal. Pode ser utilizado para a carga de Metas e Soluções Estratégicas.</inlineHelpText>
    <label>Valor - Décimo Primeiro Mês - AF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>