force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_ValorOitavoMesAF__c.field-meta.xml
<CustomField>
    <fullName>V_ValorOitavoMesAF__c</fullName>
    <description>Valor do oitavo mês do ano fiscal. Pode ser utilizado para a carga de Metas e Soluções Estratégicas.</description>
    <inlineHelpText>Valor do oitavo mês do ano fiscal. Pode ser utilizado para a carga de Metas e Soluções Estratégicas.</inlineHelpText>
    <label>Valor - Oitavo Mês - AF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>