force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_ValorPrimeiroMesAF__c.field-meta.xml
<CustomField>
    <fullName>V_ValorPrimeiroMesAF__c</fullName>
    <description>Valor do primeiro mês do ano fiscal. Pode ser utilizado para a carga de Metas e Soluções Estratégicas.</description>
    <inlineHelpText>Valor do primeiro mês do ano fiscal. Pode ser utilizado para a carga de Metas e Soluções Estratégicas.</inlineHelpText>
    <label>Valor - Primeiro Mês - AF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>