force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_ValorSetimoMesAF__c.field-meta.xml
<CustomField>
    <fullName>V_ValorSetimoMesAF__c</fullName>
    <description>Valor do sétimo mês do ano fiscal. Pode ser utilizado para a carga de Metas e Soluções Estratégicas.</description>
    <inlineHelpText>Valor do sétimo mês do ano fiscal. Pode ser utilizado para a carga de Metas e Soluções Estratégicas.</inlineHelpText>
    <label>Valor - Setimo Mês - AF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>