force-app/main/default/objects/VN_CargasDadosTemp__c/fields/V_ValorTerceiroMesAF__c.field-meta.xml
<CustomField>
    <fullName>V_ValorTerceiroMesAF__c</fullName>
    <description>Valor do terceiro mês do ano fiscal. Pode ser utilizado para a carga de Metas e Soluções Estratégicas.</description>
    <inlineHelpText>Valor do terceiro mês do ano fiscal. Pode ser utilizado para a carga de Metas e Soluções Estratégicas.</inlineHelpText>
    <label>Valor - Terceiro Mês - AF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>