force-app/main/default/objects/VN_CargasDadosTemp__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>V_AnoFiscal__c</columns>
    <columns>V_BU__c</columns>
    <columns>V_Mes__c</columns>
    <columns>V_Meta__c</columns>
    <columns>V_Data__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
    <language>pt_BR</language>
</ListView>